Upload a card image & add it to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <title>Flexbox Document</title>
 </head>
 <body>
+
+    <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
+    <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
+    <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
+    <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
+    <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
+    <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
+    <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
+    <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
+    <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
+    <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
+    <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
+    <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
     
 </body>
 </html>
