Set html .container; set basic .container flex properties; set max-width for imgs

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,20 +8,26 @@
     <link rel="stylesheet" href="style.css">
     <title>Flexbox Document</title>
 </head>
+
 <body>
 
-    <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
-    <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
-    <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
-    <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
-    <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
-    <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
-    <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
-    <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
-    <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
-    <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
-    <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
-    <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
-    
+    <div class="container">
+
+        <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
+        <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
+        <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
+        <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
+        <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
+        <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
+        <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
+        <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
+        <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
+        <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
+        <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
+        <div><img src="joker-HQ-006-01.jpg" alt="Card backface image"></div>
+
+    </div>
+
 </body>
+
 </html>
